--- a/SSDI.RequestMonitoring.UI/Layout/Components/Settings/GeneralSettings.razor
+++ b/SSDI.RequestMonitoring.UI/Layout/Components/Settings/GeneralSettings.razor
@@ -7,7 +7,7 @@
     <div class="settings-section">
         <h4>General Settings</h4>
 
-        <div class="settings-item">
+        @* <div class="settings-item">
             <div class="settings-item__label">
                 <label for="language">Language</label>
                 <span class="settings-hint">Choose your preferred language</span>
@@ -51,7 +51,7 @@
                     <span>System</span>
                 </button>
             </div>
-        </div>
+        </div> *@
     </div>
 </div>
 
@@ -98,7 +98,5 @@
         theme = newTheme;
         await localStorage.SetItemAsync("theme", theme);
         toastSvc.ShowSuccess($"Theme changed to {newTheme}!");
-
-        // You might want to trigger a theme change event here
     }
 }
